--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -78,6 +78,7 @@
     </ApplicationDefinition>
     <Compile Include="Models\Converters\ExampleConverter.cs" />
     <Compile Include="Models\DTO\Setting.cs" />
+    <Compile Include="Models\Learning.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="Views\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
