--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -181,6 +181,9 @@
     <Content Include="Files\Dictionaries\4000 Essential Words 4.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Files\Dictionaries\All Essential Words.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\nationality.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
