--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -112,7 +112,7 @@
     <Compile Include="Models\Converters\ColorConverter.cs" />
     <Compile Include="Models\DTO\Option.cs" />
     <Compile Include="Models\DTO\Presenter.cs" />
-    <Compile Include="Models\Example.cs" />
+    <Compile Include="Models\Info\Example.cs" />
     <Compile Include="Models\Flashcard.cs" />
     <Compile Include="Models\ICard.cs" />
     <Compile Include="Models\Mixed.cs" />
@@ -140,9 +140,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Level.cs" />
-    <Compile Include="Models\PartOfSpeech.cs" />
+    <Compile Include="Models\Info\Category.cs" />
+    <Compile Include="Models\Info\Level.cs" />
+    <Compile Include="Models\Info\PartOfSpeech.cs" />
     <Compile Include="Models\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -220,6 +220,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Icons\search.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Icons\shout.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\amount.png">
