+ Examples editing, thesaurus on a card & new format icons

--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -242,6 +242,9 @@
     <Content Include="Icons\bill.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Icons\blank.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icons\blocks.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
