+ Displaying end editing thesaurus

--- a/W.O.R.D.S/W.O.R.D.S.csproj
+++ b/W.O.R.D.S/W.O.R.D.S.csproj
@@ -296,6 +296,9 @@
     <Content Include="Icons\fight.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Icons\get.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Icons\happy.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
